--- a/examples/commerce-crystallize/package.json
+++ b/examples/commerce-crystallize/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@crystallize/content-transformer": "6.0.0",
+    "@crystallize/react-image": "3.1.1",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
