--- a/examples/commerce-crystallize/package.json
+++ b/examples/commerce-crystallize/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@crystallize/content-transformer": "6.0.0",
     "@crystallize/react-image": "3.1.1",
+    "@vime/react": "4.1.2",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
